fix: align items in main container for improved layout

--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ main {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: center;
 }
 
 .main_section {
@@ -14,6 +15,8 @@ main {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  max-width: 1440px;
+  width: 100%;
 }
 
 .join_logo{
